--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <input class="colorpicker">
 <input class="colorpicker">
 
-<script src="jquery.js"></script>
-<script src="color.js"></script>
+<script src="colorpicker.js"></script>
+<script src="colorpicker.js"></script>
 </body>
 </html>
